2015-12-19  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/ocihandle.rb: Support SYSBACKUP, SYSDG
	    and SYSKM privileges.
	    (github issue #110)

2015-12-19  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/plthook_win32.c: Fix bug introduced by the previous commit
	    for mingw32 64-bit compiler.
	    (github issue #113)

2015-12-18  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/plthook_win32.c, ext/oci8/extconf.rb: Import the latest
	    plthook_win32.c for cygwin. Ruby-oci8 had not been compiled on
	    cygwin since 2.1.8.
	    (github issue #113)

2015-12-18  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Fix a linkage error on cygwin and mingw32
	    when installing without `--with-runtime-check`.
	    This bug was introduced in ruby-oci8 2.2.1.
	    (github issue #113)

2015-11-28  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: Check the default value of DYLD_FALLBACK_LIBRARY_PATH
	    after checking OCI_DIR. (OS X only)

2015-11-01  Kubo Takehiro  <kubo@jiubao.org>
	* NEWS: Add changes between 2.2.0.2 and 2.2.1.
	* lib/oci8/version.rb: update to 2.2.1.

2015-11-01  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/oci8.h: Delete unnecessary checks.
	* ext/oci8/oraconf.rb: Reduce time to build an import library on
	    Mingw32 and Cygwin.

2015-11-01  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: delete code for Oracle 8i.

2015-10-26  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Fix handle leaks when OCI8#ping is used and
	    the Oracle client version is 10gR1.
	    This bug was introduced in ruby-oci8 2.2.0.

2015-10-26  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: Revive code dropped in ruby-oci8 2.2.0.
	    This prevents potential SEGV on ruby process termination.

2015-10-26  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c: Drop code for ruby 1.8.
	    Rational has been a built-in type since ruby 1.9.

2015-10-20  Kubo Takehiro  <kubo@jiubao.org>