@@ -17,3 +17,4 @@ docs/install-binary-package.md
 docs/install-on-osx.md
 docs/platform-specific-issues.md
 docs/report-installation-issue.md
+docs/timeout-parameters.md
