@@ -75,4 +75,130 @@ class TestConnStr < Minitest::Test
       end
     end
   end
+
+  # https://docs.oracle.com/database/121/NETAG/naming.htm#BABJBFHJ
+  DESC_TEST_CASE =
+    [
+     # Cannot distinguish net service names from easy connect strings in this case.
+     ["sales-server", nil, nil, "sales-server"],
+     # Easy Connect string with host.
+     ["//sales-server", nil, nil, <<EOS],
+(DESCRIPTION=
+   (CONNECT_DATA=
+       (SERVICE_NAME=))
+   (ADDRESS=
+       (PROTOCOL=TCP)
+       (HOST=sales-server)
+       (PORT=1521)))
+EOS
+     # Easy Connect string with host and port.
+     ["sales-server:3456", nil, nil, <<EOS],
+(DESCRIPTION=
+   (CONNECT_DATA=
+       (SERVICE_NAME=))
+   (ADDRESS=
+       (PROTOCOL=TCP)
+       (HOST=sales-server)
+       (PORT=3456)))
+EOS
+     # The host name is sales-server and the service name is sales.
+     ["sales-server/sales", nil, nil, <<EOS],
+(DESCRIPTION=
+  (CONNECT_DATA=
+     (SERVICE_NAME=sales))
+  (ADDRESS=
+     (PROTOCOL=TCP)
+     (HOST=sales-server)
+     (PORT=1521)))
+EOS
+     # Easy Connect string with IPv6 address.
+     ["[2001:0db8:0:0::200C:417A]:80/sales", nil, nil, <<EOS],
+(DESCRIPTION=
+  (CONNECT_DATA=
+      (SERVICE_NAME=sales))
+  (ADDRESS=
+      (PROTOCOL=TCP)
+      (HOST=2001:0db8:0:0::200C:417A)
+      (PORT=80)))
+EOS
+     # Easy Connect string with IPv6 host address.
+     ["sales-server:80/sales", nil, nil, <<EOS],
+(DESCRIPTION=
+  (CONNECT_DATA=
+      (SERVICE_NAME=sales))
+  (ADDRESS=
+      (PROTOCOL=TCP)
+      (HOST=sales-server)
+      (PORT=80)))
+EOS
+     # Easy Connect string with host, service name, and server.
+     ["sales-server/sales:dedicated/inst1", nil, nil, <<EOS],
+(DESCRIPTION=
+  (CONNECT_DATA=
+      (SERVICE_NAME=sales)
+      (SERVER=dedicated)
+      (INSTANCE_NAME=inst1))
+  (ADDRESS=
+      (PROTOCOL=TCP)
+      (HOST=sales-server)
+      (PORT=1521)))
+EOS
+      ["sales-server//inst1", nil, nil, <<EOS],
+(DESCRIPTION=
+   (CONNECT_DATA=
+      (SERVICE_NAME=)
+      (INSTANCE_NAME=inst1))
+   (ADDRESS=
+      (PROTOCOL=TCP)
+      (HOST=sales-server)
+      (PORT=1521)))
+EOS
+     # 
+     ["sales-server/sales", 20, nil, <<EOS],
+(DESCRIPTION=
+  (CONNECT_DATA=
+     (SERVICE_NAME=sales))
+  (ADDRESS=
+     (PROTOCOL=TCP)
+     (HOST=sales-server)
+     (PORT=1521))
+  (TRANSPORT_CONNECT_TIMEOUT=20))
+EOS
+     # 
+     ["sales-server/sales", nil, 30, <<EOS],
+(DESCRIPTION=
+  (CONNECT_DATA=
+     (SERVICE_NAME=sales))
+  (ADDRESS=
+     (PROTOCOL=TCP)
+     (HOST=sales-server)
+     (PORT=1521))
+  (CONNECT_TIMEOUT=30))
+EOS
+     #
+     ["sales-server/sales", 20, 30, <<EOS],
+(DESCRIPTION=
+  (CONNECT_DATA=
+     (SERVICE_NAME=sales))
+  (ADDRESS=
+     (PROTOCOL=TCP)
+     (HOST=sales-server)
+     (PORT=1521))
+  (TRANSPORT_CONNECT_TIMEOUT=20)
+  (CONNECT_TIMEOUT=30))
+EOS
+    ]
+
+  def test_connect_descriptor
+    obj = OCI8.allocate # create an uninitialized object.
+    DESC_TEST_CASE.each do |test_case|
+      easy_connect_string = test_case[0]
+      tcp_connnect_timeout= test_case[1]
+      outbound_connnect_timeout = test_case[2]
+      expected_result = test_case[3].gsub(/\s/, '')
+      # use instance_eval to call a private method to_connect_descriptor
+      result = obj.instance_eval { to_connect_descriptor(easy_connect_string, tcp_connnect_timeout, outbound_connnect_timeout) }
+      assert_equal(expected_result, result, easy_connect_string)
+    end
+  end
 end
