@@ -1,3 +1,10 @@
+2015-12-20  Kubo Takehiro  <kubo@jiubao.org>
+	* lib/oci8/oci8.rb, lib/oci8/properties.rb, test/test_connstr.rb:
+	    Support tcp_connect_timeout, connect_timeout, send_timeout and
+	    recv_timeout in OCI8::properties.
+	* .yardopts, dist-files, docs/timeout-parameters.md: Add document
+	    about timeout parameters.
+
 2015-12-19  Kubo Takehiro  <kubo@jiubao.org>
 	* lib/oci8/oci8.rb, lib/oci8/ocihandle.rb: Support SYSBACKUP, SYSDG
 	    and SYSKM privileges.
